--- a/O-L-147.html
+++ b/O-L-147.html
@@ -44,7 +44,7 @@
 
   <div class="container">
 	<div><h1>OBRA L-147</h1>
-	  <p>Obra ejecutada en el barrio privado "Los Robles de Pilar". Superficie 184m2 cubiertos totales, plazo de ejecución de obra 12 (doce) meses.</p>
+	  <p>Obra ejecutada en el barrio privado "Los Robles de Pilar". Superficie 184m2 cubiertos totales, plazo de ejecución de obra 8 (ocho) meses.</p>
   </div>
 	
   </div>
