--- a/O-L-152.html
+++ b/O-L-152.html
@@ -44,7 +44,7 @@
   <br>
   <div class="container">
 	<div><h1>OBRA L-152</h1>
-	  <p>Obra ejecutada en el barrio privado "Los Robles de Pilar". Superficie 170m2 cubiertos totales, plazo de ejecución de obra 12 (doce) meses.</p>
+	  <p>Obra ejecutada en el barrio privado "Los Robles de Pilar". Superficie 170m2 cubiertos totales, plazo de ejecución de obra 8 (ocho) meses.</p>
   </div>
 </div>
 <br> 
